--- a/FFImageLoadingTransformationIssue/FFImageLoadingTransformationIssue/FFImageLoadingTransformationIssue.csproj
+++ b/FFImageLoadingTransformationIssue/FFImageLoadingTransformationIssue/FFImageLoadingTransformationIssue.csproj
@@ -15,5 +15,6 @@
     <PackageReference Include="Xamarin.FFImageLoading" Version="2.4.11.982" />
     <PackageReference Include="Xamarin.FFImageLoading.Transformations" Version="2.4.11.982" />
     <PackageReference Include="Xamarin.FFImageLoading.Forms" Version="2.4.11.982" />
+    <PackageReference Include="Xam.Plugins.Forms.ImageCircle" Version="3.0.0.5" />
   </ItemGroup>
 </Project>
