used Xamarin.Plugin.ImageEdit

--- a/FFImageLoadingTransformationIssue/FFImageLoadingTransformationIssue/FFImageLoadingTransformationIssue.csproj
+++ b/FFImageLoadingTransformationIssue/FFImageLoadingTransformationIssue/FFImageLoadingTransformationIssue.csproj
@@ -16,5 +16,6 @@
     <PackageReference Include="Xamarin.FFImageLoading.Transformations" Version="2.4.11.982" />
     <PackageReference Include="Xamarin.FFImageLoading.Forms" Version="2.4.11.982" />
     <PackageReference Include="Xam.Plugins.Forms.ImageCircle" Version="3.0.0.5" />
+    <PackageReference Include="Xamarin.Plugin.ImageEdit" Version="1.0.0" />
   </ItemGroup>
 </Project>
