Resolved crop issue

--- a/FFImageLoadingTransformationIssue/FFImageLoadingTransformationIssue/FFImageLoadingTransformationIssue.csproj
+++ b/FFImageLoadingTransformationIssue/FFImageLoadingTransformationIssue/FFImageLoadingTransformationIssue.csproj
@@ -17,5 +17,6 @@
     <PackageReference Include="Xamarin.FFImageLoading.Forms" Version="2.4.11.982" />
     <PackageReference Include="Xam.Plugins.Forms.ImageCircle" Version="3.0.0.5" />
     <PackageReference Include="Xamarin.Plugin.ImageEdit" Version="1.0.0" />
+    <PackageReference Include="DLToolkit.Forms.Controls.ImageCropView" Version="1.0.7" />
   </ItemGroup>
 </Project>
